--- a/Projeto_1/projeto_1.ipynb
+++ b/Projeto_1/projeto_1.ipynb
@@ -2,13 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b3756ad8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
+    "from scipy.optimize import curve_fit\n",
+    "from scipy.integrate import cumulative_trapezoid\n",
+    "from scipy.interpolate import CubicSpline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9e6b6ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class IsingModel:\n",
+    "    def __init__(self, L, T):"
    ]
   }
  ],
