--- a/Projeto_1/projeto_1.ipynb
+++ b/Projeto_1/projeto_1.ipynb
@@ -23,7 +23,21 @@
    "outputs": [],
    "source": [
     "class IsingModel:\n",
-    "    def __init__(self, L, T):"
+    "    def __init__(self, L, T):\n",
+    "        #parametros do modelo\n",
+    "        self.L = L\n",
+    "        self.T = T\n",
+    "\n",
+    "        #array com os spins\n",
+    "        self.spins = np.ones((L,L))\n",
+    "\n",
+    "        #arrays para guardar evoluções das variáveis\n",
+    "        self.energies= []\n",
+    "        self.magnetizations= []\n",
+    "\n",
+    "    def calc_ener_spin(self, i, j):\n",
+    "\n",
+    "        return energy"
    ]
   }
  ],
