--- a/Projeto_1/projeto_1.ipynb
+++ b/Projeto_1/projeto_1.ipynb
@@ -39,6 +39,30 @@
     "\n",
     "        return energy"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad457815",
+   "metadata": {},
+   "source": [
+    "## 1. Tempo de Termalização"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7deccd52",
+   "metadata": {},
+   "source": [
+    "## 2. Determinação da Temperatura Crítica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21fbbf54",
+   "metadata": {},
+   "source": [
+    "## 3. Determinação da Energia Livre de Helmholtz, F"
+   ]
   }
  ],
  "metadata": {
