--- a/Projeto_1/projeto_1.ipynb
+++ b/Projeto_1/projeto_1.ipynb
@@ -70,7 +70,7 @@
     "    \n",
     "    def iter_monte_carlo (self, n_iter):\n",
     "\n",
-    "        for i in tqdm (range(n_inter), desc=f\"L={self.L:6d}, T={self.T:8f}\"):\n",
+    "        for i in tqdm (range(n_iter), desc=f\"L={self.L:6d}, T={self.T:8f}\"):\n",
     "    \n",
     "    @property\n",
     "    def energy(self):\n",
