--- a/Projeto_1/projeto_1.ipynb
+++ b/Projeto_1/projeto_1.ipynb
@@ -33,24 +33,24 @@
     "\n",
     "        #arrays para guardar evoluções das variáveis\n",
     "        self.energies= []\n",
-    "        self.magnetizations= []\n",
+    "        self.magnetizations= [-L**2]\n",
     "\n",
     "    def calc_ener_spin(self, i, j):\n",
     "\n",
     "        return energy\n",
     "    \n",
-    "    def calc_ener (self):\n",
+    "    def calc_ener ( self ):\n",
     "\n",
     "\n",
     "        return energy\n",
     "    \n",
-    "    def calc_mag(self):\n",
-    "\n",
+    "    def calc_mag( self ):\n",
+    "        mag = self.total_magnetization\n",
     "        return mag\n",
     "    \n",
     "    def iter_monte_carlo (self, n_iter):\n",
     "\n",
-    "        for i in tqdm (range(n_inter), desc=f\"L={self.L:6d}, T={self.T:8f}\")   \n"
+    "        for i in tqdm (range(n_iter), desc=f\"L={self.L:6d}, T={self.T:8f}\")   \n"
    ]
   },
   {
