Correção de variáveis

--- a/Projeto_1/projeto_1.ipynb
+++ b/Projeto_1/projeto_1.ipynb
@@ -51,24 +51,23 @@
     "        energy=-spin*neighbours\n",
     "        return energy\n",
     "    \n",
-    "    def calc_ener_total(self):\n",
+    "    def calc_ener_total( self ):\n",
     "        energy=0\n",
     "        for i in range(self.L):\n",
     "            for j in range(self.L):\n",
     "                energy+= -self.spins[i,j]*(self.spins[(i+1)%self.L,j]+ self.spins[i,(j+1)%self.L])\n",
     "        return energy\n",
     "    \n",
-    "    def calc_ener (self):\n",
+    "    def calc_ener ( self ):\n",
     "        energy=self.energy_total/self.L**2\n",
-    "\n",
     "\n",
     "        return energy\n",
     "    \n",
     "    def calc_mag( self ):\n",
-    "        mag = self.total_magnetization\n",
+    "        mag = self.magnet_total\n",
     "        return mag\n",
     "    \n",
-    "    def iter_monte_carlo (self, n_iter):\n",
+    "    def iter_monte_carlo ( self, n_iter ):\n",
     "\n",
     "        for i in tqdm (range(n_iter), desc=f\"L={self.L:6d}, T={self.T:8f}\"):\n",
     "    \n",
