--- a/Projeto_1/projeto_1.ipynb
+++ b/Projeto_1/projeto_1.ipynb
@@ -87,6 +87,83 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d577be21",
+   "metadata": {},
+   "source": [
+    "**a)** O código corre uma simulação para cada combinação de L e T e dá plot no gráfico da energia média."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc4fc276",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L_array = [16, 32, 64, 128]\n",
+    "T_array = [1, 2, 3, 4]\n",
+    "ener_array = np.zeros(4)\n",
+    "\n",
+    "for L in L_array:\n",
+    "    for T in T_array:\n",
+    "        ising = IsingModel(L, T)\n",
+    "        n_iter = np.linspace(1, 10, 9)\n",
+    "        sims = ising.iter_monte_carlo(n_iter) #Correr a simulação para cada n_iter\n",
+    "        avg_ener = (ising.energies/L) #Energia média\n",
+    "        np.append(ener_array, avg_ener)\n",
+    "\n",
+    "        plt.figure(figsize=(10, 5))\n",
+    "        plt.plot(n_iter, avg_ener, label=f'Simulação {L}-{T}', color='blue') \n",
+    "        plt.title('Gráfico de Seno') \n",
+    "        plt.xlabel('Eixo X') \n",
+    "        plt.ylabel('Eixo Y') \n",
+    "        plt.legend() \n",
+    "        plt.grid() \n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efa13c2d",
+   "metadata": {},
+   "source": [
+    "**b)** Fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2e44233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ener_func(N, e0, ef, tau):\n",
+    "    return ef + (e0 - ef) * np.exp(- N/tau)\n",
+    "\n",
+    "vars = [curve_fit(ener_func, n_iter, ener_array[i]) for i in range(4)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f2e9646",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "taus = vars[2]\n",
+    "\n",
+    "fig = plt.figure(figsize=(10, 6))\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "ax.plot_surface(L, T, taus, cmap='viridis', edgecolor='none')\n",
+    "ax.set_xlabel('L')\n",
+    "ax.set_ylabel('T')\n",
+    "ax.set_zlabel(r'$\\tau_{term}$')\n",
+    "ax.set_title('Intensidade da Luz em Função de X e Y')\n",
+    "plt.show() # mostrando o gráfico\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7deccd52",
    "metadata": {},
    "source": [
