--- a/Projeto_1/projeto_1.ipynb
+++ b/Projeto_1/projeto_1.ipynb
@@ -67,9 +67,31 @@
     "        mag = self.magnet_total\n",
     "        return mag\n",
     "    \n",
-    "    def iter_monte_carlo ( self, n_iter ):\n",
     "\n",
-    "        for i in tqdm (range(n_iter), desc=f\"L={self.L:6d}, T={self.T:8f}\"):\n",
+    "    def iter_monte_carlo(self,n_iter):\n",
+    "\n",
+    "        #calcular a energia do sistema inicialmente\n",
+    "        E = self.calc_ener_total()\n",
+    "\n",
+    "        #iterar com o método de Metropolis Hastings\n",
+    "        for _ in tqdm(range(n_iter), desc=f\"L={self.L:6d},T={self.T:8f}\"):\n",
+    "            #proposal: spin flip\n",
+    "            i = np.random.randint(0, self.L)\n",
+    "            j = np.random.randint(0, self.L)\n",
+    "            prop = self.spins\n",
+    "            prop[i, j] = -prop[i, j]\n",
+    "\n",
+    "            #calculate acceptance probability\n",
+    "            Delta_E = -2*self.calc_ener_spin(self, i, j)\n",
+    "            R = np.exp(Delta_E/(self.T))\n",
+    "            \n",
+    "            u = np.random.rand()\n",
+    "            if R > u:\n",
+    "                self.spins = prop\n",
+    "                E += Delta_E\n",
+    "\n",
+    "            self.energies.append(E)\n",
+    "            self.magnetizations.append(self.calc_mag())\n",
     "    \n",
     "    @property\n",
     "    def energy(self):\n",
