Recommit das minhas mudanças

--- a/Projeto_1/projeto_1.ipynb
+++ b/Projeto_1/projeto_1.ipynb
@@ -713,7 +713,7 @@
     "plt.ylabel('Eixo Y') # rótulo do eixo y\n",
     "plt.legend() # legenda\n",
     "plt.grid() # grelha\n",
-    "plt.show() # mostrando o gráfico"
+    "plt.show() # mostrando o gráfic"
    ]
   },
   {
