--- a/Projeto_1/projeto_1.ipynb
+++ b/Projeto_1/projeto_1.ipynb
@@ -719,7 +719,7 @@
     "\n",
     "Este integral pode ser calculado da forma usual, primitivando numericamente e fazendo a diferença do valor da primitiva nos limites do intervalo.\n",
     "\n",
-    "Utilizando o método cumulative_trapezoid da biblioteca scipy, calculámos a primitiva numérica para o integrando no domínio útil. Esta função dá como _output_ um array com os valores da primitiva. De seguida, calculámos o valor do integral fazendo a diferença entre os termos limite do _array_ da primitiva, isto é, a diferença entre os termos correspondente a $T' = 10$ e $T' = T$."
+    "Utilizando o método `cumulative_trapezoid` da biblioteca `scipy`, calculámos a primitiva numérica para o integrando no domínio útil. Esta função dá como _output_ um array com os valores da primitiva. De seguida, calculámos o valor do integral fazendo a diferença entre os termos limite do _array_ da primitiva, isto é, a diferença entre os termos correspondente a $T' = 10$ e $T' = T$."
    ]
   },
   {
