--- a/Projeto_1/projeto_1.ipynb
+++ b/Projeto_1/projeto_1.ipynb
@@ -844,7 +844,7 @@
    "id": "39364d19",
    "metadata": {},
    "source": [
-    "**c)** A 2ª derivada de um interpolador feito utilizando o módulo scipy.interpolate pode ser facilmente calculada chamando o interpolador para o _array_ de domínio de interesse, e especificando num segundo parâmetro o grau da derivada (neste caso 2). Ao fazer isto e desenhar o gráfico, podemos observar que à medida que a temperatura cresce, a 2ª derivada tende rapidamente para 0. Observamos também que a função oscila na região em torno da temperatura crítica. Isto deve-se a..."
+    "**c)** A 2ª derivada de um interpolador feito utilizando o módulo scipy.interpolate pode ser facilmente calculada chamando o interpolador para o array de domínio de interesse, e especificando num segundo parâmetro o grau da derivada (neste caso 2). Ao fazer isto e desenhar o gráfico, podemos observar que à medida que a temperatura cresce, a 2ª derivada tende rapidamente para 0. Observamos também que a função oscila na região em torno da temperatura crítica. Isto deve-se ao facto de que, próximo da temperatura crítica, a capacidade calorífica apresenta um pico (ou divergência suave), refletindo a presença de uma transição de fase. A energia livre de Helmholtz, sendo relacionada com a energia interna, apresenta uma variação mais abrupta nas suas derivadas próximas de $T_c$ resultando nessas oscilações na segunda derivada. Longe da temperatura crítica, o sistema torna-se mais estável, e as derivadas mais altas suavizam-se, tendendo para zero porque a energia livre varia quase linearmente ou suavemente com a temperatura."
    ]
   },
   {
