--- a/Projeto_2/projeto_2.ipynb
+++ b/Projeto_2/projeto_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "32a61cde",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f9d5365a",
    "metadata": {},
    "outputs": [],
@@ -35,12 +35,37 @@
     "    else:\n",
     "        raise ValueError(\"m deve ser um float ou um array com dimensão N\")\n",
     "\n",
-    "        M = np.diag(masses)\n",
-    "        return M\n",
+    "    M = np.diag(masses)\n",
+    "    return M\n",
     "\n",
     "def _build_K_matrix(self, k_springs, left_wall_k, right_wall_k):\n",
     "\n",
-    "    return K\n",
+    "        N = self.N\n",
+    "\n",
+    "        # Verifica tipo de k_springs\n",
+    "        if isinstance(k_springs, (int, float)):\n",
+    "            k_array = np.full(N - 1, k_springs)\n",
+    "        elif isinstance(k_springs, (list, np.ndarray)) and len(k_springs) == N - 1:\n",
+    "            k_array = np.array(k_springs)\n",
+    "        else:\n",
+    "            raise ValueError(\"k_springs deve ser float ou array com N-1 elementos\")\n",
+    "\n",
+    "        # Inicializa matriz K\n",
+    "        K = np.zeros((N, N))\n",
+    "\n",
+    "        # Preenche matriz com ligações entre massas\n",
+    "        for i in range(N - 1):\n",
+    "            K[i, i] += k_array[i]\n",
+    "            K[i + 1, i + 1] += k_array[i]\n",
+    "            K[i, i + 1] -= k_array[i]\n",
+    "            K[i + 1, i] -= k_array[i]\n",
+    "\n",
+    "        # Ligações às paredes\n",
+    "        K[0, 0] += left_wall_k\n",
+    "        K[N - 1, N - 1] += right_wall_k\n",
+    "\n",
+    "        return K\n",
+    "\n",
     "\n",
     "def solve_coupled_system_linear(self, x0=None, v0=None, t_max=50, num_points=1000):\n",
     "\n",
