import do solveivp

--- a/Projeto_2/projeto_2.ipynb
+++ b/Projeto_2/projeto_2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "32a61cde",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import scipy"
+    "from scipy.integrate import solve_ivp"
    ]
   },
   {
