--- a/Projeto_2/projeto_2.ipynb
+++ b/Projeto_2/projeto_2.ipynb
@@ -15,6 +15,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a8593106",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def euler_method(f, t0, y0, t_end, h):\n",
+    "    \"\"\"\n",
+    "    Solve ODE using Euler's method for comparison\n",
+    "    \"\"\"\n",
+    "    t_vals = np.arange(t0, t_end + h, h)\n",
+    "    y_vals = np.zeros(len(t_vals))\n",
+    "    y_vals[0] = y0\n",
+    "    \n",
+    "    for i in range(len(t_vals) - 1):\n",
+    "        y_vals[i+1] = y_vals[i] + h * f(t_vals[i], y_vals[i])\n",
+    "    \n",
+    "    return t_vals, y_vals\n",
+    "\n",
+    "def modified_euler(f, t0, y0, t_end, h):\n",
+    "    \"\"\"\n",
+    "    Solve ODE using Modified Euler (Heun's) method\n",
+    "    \"\"\"\n",
+    "    t_vals = np.arange(t0, t_end + h, h)\n",
+    "    y_vals = np.zeros(len(t_vals))\n",
+    "    y_vals[0] = y0\n",
+    "    \n",
+    "    for i in range(len(t_vals) - 1):\n",
+    "        k1 = h * f(t_vals[i], y_vals[i])\n",
+    "        k2 = h * f(t_vals[i] + h, y_vals[i] + k1)\n",
+    "        y_vals[i+1] = y_vals[i] + 0.5 * (k1 + k2)\n",
+    "    \n",
+    "    return t_vals, y_vals\n",
+    "\n",
+    "def midpoint_method(f, t0, y0, t_end, h):\n",
+    "    \"\"\"\n",
+    "    Solve ODE using Midpoint method\n",
+    "    \"\"\"\n",
+    "    t_vals = np.arange(t0, t_end + h, h)\n",
+    "    y_vals = np.zeros(len(t_vals))\n",
+    "    y_vals[0] = y0\n",
+    "    \n",
+    "    for i in range(len(t_vals) - 1):\n",
+    "        k1 = h * f(t_vals[i], y_vals[i])\n",
+    "        k2 = h * f(t_vals[i] + h/2, y_vals[i] + k1/2)\n",
+    "        y_vals[i+1] = y_vals[i] + k2\n",
+    "    \n",
+    "    return t_vals, y_vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f9d5365a",
    "metadata": {},
    "outputs": [],
