--- a/Projeto_2/projeto_2.ipynb
+++ b/Projeto_2/projeto_2.ipynb
@@ -72,10 +72,65 @@
     "\n",
     "            return K\n",
     "\n",
-    "\n",
     "    def solve_coupled_system_linear(self, x0=None, v0=None, t_max=50, num_points=1000):\n",
     "        \n",
     "        return sol.t, sol.y, t_eval, u_euler\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1fffe1d",
+   "metadata": {},
+   "source": [
+    "**2. Simulação**\n",
+    "\n",
+    "**a)** O método solve_couple_system_linear contém já as soluções para o método do scipy.integrate e o método de Euler. Assim, para comparar os dois métodos, é necessário apenas fazer a simulação uma vez, e separar, para cada massa, a solução com cada método."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f090909f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Definir variáveis importantes\n",
+    "m = 1\n",
+    "k = 1\n",
+    "n = 5\n",
+    "delta_x = 0.1\n",
+    "\n",
+    "#Declaração da classe\n",
+    "oscillator = Coupled_Oscillators(n, m, k, k, k)\n",
+    "\n",
+    "#Definir condições iniciais\n",
+    "x0 = np.array([0, 0, delta_x, 0, 0])\n",
+    "v0 = np.zeros(5)\n",
+    "\n",
+    "#Resolver o sistema\n",
+    "sol = oscillator.solve_coupled_system_linear(x0, v0)\n",
+    "\n",
+    "#Soluções pelo método do scipy.integrate\n",
+    "X = sol[0]\n",
+    "Y = sol[1]\n",
+    "\n",
+    "#Soluções pelo método de Euler\n",
+    "euler_X = sol[3]\n",
+    "euler_Y = sol[4]\n",
+    "\n",
+    "#Gráficos\n",
+    "fig, axes = plt.subplots(5, 1, figsize=(12, 16))\n",
+    "for i in enumerate(X):\n",
+    "    ax = ax[i, 0]\n",
+    "    ax.plot(X[i], Y[i], label = 'Normal integrate')\n",
+    "    ax.plot(euler_X[i], euler_Y[i], label = 'Euler integrate')\n",
+    "    ax.set_title(f'Massa nº{i}')\n",
+    "    ax.set_xlabel('Tempo (s)')\n",
+    "    ax.set_ylabel('Posição (m)')\n",
+    "    ax.grid(True)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
