--- a/Projeto_2/projeto_2.ipynb
+++ b/Projeto_2/projeto_2.ipynb
@@ -74,6 +74,7 @@
     "\n",
     "    def solve_coupled_system_linear(self, x0=None, v0=None, t_max=50, num_points=1000):\n",
     "        \n",
+    "        \n",
     "        return sol.t, sol.y, t_eval, u_euler\n"
    ]
   },
@@ -101,14 +102,14 @@
     "delta_x = 0.1\n",
     "\n",
     "#Declaração da classe\n",
-    "oscillator = Coupled_Oscillators(n, m, k, k, k)\n",
+    "shifted_middle = Coupled_Oscillators(n, m, k, k, k)\n",
     "\n",
     "#Definir condições iniciais\n",
     "x0 = np.array([0, 0, delta_x, 0, 0])\n",
     "v0 = np.zeros(5)\n",
     "\n",
     "#Resolver o sistema\n",
-    "sol = oscillator.solve_coupled_system_linear(x0, v0)\n",
+    "sol = shifted_middle.solve_coupled_system_linear(x0, v0)\n",
     "\n",
     "#Soluções pelo método do scipy.integrate\n",
     "X = sol[0]\n",
@@ -131,6 +132,91 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f9fc059",
+   "metadata": {},
+   "source": [
+    "**b)** O código para esta simulação é semelhante à alínea anterior, mudando apenas o _array_ das posições iniciais. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02a82a5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Declaração da classe\n",
+    "all_shifted = Coupled_Oscillators(n, m, k, k, k)\n",
+    "\n",
+    "#Definir condições iniciais\n",
+    "x0 = np.array(5, delta_x)\n",
+    "v0 = np.zeros(5)\n",
+    "\n",
+    "#Resolver o sistema\n",
+    "sol = all_shifted.solve_coupled_system_linear(x0, v0)\n",
+    "\n",
+    "#Soluções pelo método do scipy.integrate\n",
+    "X = sol[0]\n",
+    "Y = sol[1]\n",
+    "\n",
+    "#Soluções pelo método de Euler\n",
+    "euler_X = sol[3]\n",
+    "euler_Y = sol[4]\n",
+    "\n",
+    "#Gráficos\n",
+    "fig, axes = plt.subplots(5, 1, figsize=(12, 16))\n",
+    "for i in enumerate(X):\n",
+    "    ax = ax[i, 0]\n",
+    "    ax.plot(X[i], Y[i], label = 'Normal integrate')\n",
+    "    ax.plot(euler_X[i], euler_Y[i], label = 'Euler integrate')\n",
+    "    ax.set_title(f'Massa nº{i}')\n",
+    "    ax.set_xlabel('Tempo (s)')\n",
+    "    ax.set_ylabel('Posição (m)')\n",
+    "    ax.grid(True)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "886587b3",
+   "metadata": {},
+   "source": [
+    "**c)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d84f47ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cinetic_energy(oscillator, x0, v0, n=1000, t_max=50):\n",
+    "\n",
+    "    #Resolver o sistema\n",
+    "    sol = oscillator.solve_coupled_linear_system(x0, v0)\n",
+    "    x_dot = sol[1][1]\n",
+    "    m = oscillator.build_mass_matrix\n",
+    "\n",
+    "    return (1/2)*np.transpose(x_dot)*m*x_dot\n",
+    "\n",
+    "def potencial_energy(oscillator, x0, v0, n=1000, t_max=50):\n",
+    "\n",
+    "    #Resolver o sistema\n",
+    "    sol = oscillator.solve_coupled_linear_system(x0, v0)\n",
+    "    x_dot = sol[1][1]\n",
+    "    K = oscillator.build_K_matrix\n",
+    "\n",
+    "    return (1/2)*np.transpose(x_dot)*K*x_dot\n",
+    "\n",
+    "def total_energy(T, V):\n",
+    "    return T + V"
    ]
   }
  ],
