--- a/Projeto_2/projeto_2.ipynb
+++ b/Projeto_2/projeto_2.ipynb
@@ -74,8 +74,52 @@
     "\n",
     "\n",
     "    def solve_coupled_system_linear(self, x0=None, v0=None, t_max=50, num_points=1000):\n",
-    "        \n",
-    "        return sol.t, sol.y, t_eval, u_euler\n"
+    "    # x0: posicoes iniciais\n",
+    "    # v0: velocidades iniciais\n",
+    "    # t_max: tempo final da simula¸c~ao\n",
+    "    # num_points: passo a condiderar na resolu¸c~ao das equa¸c~oes\n",
+    "    # deve retornar os tempos em que foi calculada a solu¸c~ao, e as posicoes e velocidades para cada tempo (ambas contidas em u)\n",
+    "    # deve retornar os resultados obtidos pelo m´etodo de Euler e pelo m´etodo do numpy\n",
+    "    # alternativamnte pode ser criado um m´etodo para a solu¸c~ao por Euler e outro para numpy\n",
+    "        return sol.t, sol.u, sol_euler.t, sol_euler_u\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2cdf108",
+   "metadata": {},
+   "source": [
+    "### Exercício 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "189adde8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''Todas as massas iguais a 1.0 [kg], e todas as molas de constante k = 1.0 [N/m]'''\n",
+    "osc = Coupled_Oscillators(N=5, m=1.0, k_springs=1.0, left_wall_k=1.0, right_wall_k=1.0)\n",
+    "\n",
+    "'''Condição inicial: só massa central deslocada'''\n",
+    "x0 = np.array([0.0, 0.0, 1.0, 0.0, 0.0])\n",
+    "v0 = np.zeros(5)\n",
+    "\n",
+    "'''Resolver o sistema para estas condições iniciais'''\n",
+    "t, sol_scipy, sol_euler = osc.solve_coupled_system_linear(x0=x0, v0=v0, t_max=50, num_points=1000)\n",
+    "\n",
+    "'''Plot dos gráficos'''\n",
+    "for i in range(5):\n",
+    "    plt.plot(t, sol_scipy[i], label=f'm{i+1} scipy')\n",
+    "    plt.plot(t, sol_euler[i], '--', label=f'm{i+1} Euler')\n",
+    "\n",
+    "plt.title(\"Posições das massas ao longo do tempo\")\n",
+    "plt.xlabel(\"Tempo\")\n",
+    "plt.ylabel(\"Posição\")\n",
+    "plt.legend()\n",
+    "plt.grid()\n",
+    "plt.show()"
    ]
   }
  ],
