--- a/Projeto_2/projeto_2.ipynb
+++ b/Projeto_2/projeto_2.ipynb
@@ -5,19 +5,7 @@
    "execution_count": 1,
    "id": "32a61cde",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'matplotlib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mintegrate\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m solve_ivp\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -77,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f9d5365a",
    "metadata": {},
    "outputs": [],
@@ -95,6 +83,7 @@
     "          \n",
     "        self.N=N\n",
     "        self.M = self._build_mass_matrix(m)\n",
+    "        self.M_inv = np.linalg.inv(self.M)\n",
     "        self.K = self._build_K_matrix(k_springs, left_wall_k, right_wall_k)\n",
     "\n",
     "    def _build_mass_matrix(self, m):\n",
@@ -138,6 +127,33 @@
     "\n",
     "    def solve_coupled_system_linear(self, x0=None, v0=None, t_max=50, num_points=1000):\n",
     "        \n",
+    "        N = self.N\n",
+    "        t_eval = np.linspace(0, t_max, num_points)\n",
+    "\n",
+    "        # Condição inicial\n",
+    "        if x0 is None:\n",
+    "            x0 = np.zeros(N)\n",
+    "        if v0 is None:\n",
+    "            v0 = np.zeros(N)\n",
+    "        u0 = np.concatenate([x0, v0]) \n",
+    "\n",
+    "        def f(t, u):\n",
+    "            x = u[:N]\n",
+    "            v = u[N:]\n",
+    "            dxdt = v\n",
+    "            dvdt = -self.M_inv @ self.K @ x\n",
+    "            return np.concatenate([dxdt, dvdt])\n",
+    "\n",
+    "        # Método de Euler (vetorial)\n",
+    "        h = t_eval[1] - t_eval[0]\n",
+    "        u_euler = np.zeros((2 * N, num_points))\n",
+    "        u_euler[:, 0] = u0\n",
+    "        for i in range(1, num_points):\n",
+    "            u_euler[:, i] = u_euler[:, i - 1] + h * f(t_eval[i - 1], u_euler[:, i - 1])\n",
+    "\n",
+    "        # Método solve_ivp do scipy.integrate\n",
+    "        sol = solve_ivp(f, [0, t_max], u0, t_eval=t_eval, method='RK45')\n",
+    "\n",
     "        return sol.t, sol.y, t_eval, u_euler\n"
    ]
   }
@@ -158,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
