--- a/Projeto_2/projeto_2.ipynb
+++ b/Projeto_2/projeto_2.ipynb
@@ -363,7 +363,7 @@
    "id": "eee35b72",
    "metadata": {},
    "source": [
-    "**4.** Trabalho adicional"
+    "### Exercício 4  - Trabalho adicional"
    ]
   },
   {
@@ -373,7 +373,7 @@
    "source": [
     "**Parte I - Animação** \n",
     "\n",
-    "Nesta parte fazemos uma animação dos modos normais, utilizando o módulo animation do matplotlib."
+    "Nesta parte fazemos uma animação dos modos normais, utilizando o módulo animation do matplotlib. Para tal foi necessário utilizar o pacote ipympl, instalado com o pip. A animação funciona fazendo um gráfico estático e redesenhando-o sucessivamente com os dados atualizados, neste caso das posições das massas nos modos normais."
    ]
   },
   {
@@ -385,12 +385,16 @@
    "source": [
     "import matplotlib.animation as animation\n",
     "\n",
+    "#Declarar imagem geral\n",
     "fig, axes = plt.subplots(5, 1, figsize=(10, 20), sharex=True)\n",
     "axes[0].set_title(\"Animações dos modos normais\")\n",
     "\n",
+    "#Variáveis para resolver o sistema\n",
     "t_max = 50\n",
     "n = 1000\n",
     "v0 = np.zeros(5)\n",
+    "\n",
+    "#Nesta lista serão armazenados os desenhos de cada modo normal\n",
     "line = []\n",
     "\n",
     "for i in range(len(modes)):\n",
@@ -399,21 +403,25 @@
     "    ax.set_ylabel('Posição (m)')\n",
     "    ax.grid(True)\n",
     "\n",
+    "    #Definição do modo normal i\n",
     "    omega = modes[i][0]\n",
     "    eta = modes[i][1]\n",
     "\n",
+    "    #Colocar modo normal i na lista de modos normais\n",
     "    line.append(ax.plot(eta, 'o-', label=f\"Modo {i} (ω = {omega:.2f} rad/s)\")[0])\n",
     "\n",
     "def update(frame):\n",
+    "    #Para cada modo normal, atualizar a posição em cada frame para a solução após esse número de passos\n",
     "    for i in range(len(modes)):\n",
-    "        eta = modes[i][1]\n",
-    "        \n",
-    "        t, pos, _, _ = osc.solve_coupled_system_linear(eta, v0, num_points=n)\n",
+    "        eta = modes[i][1] #Redeclarar o modo normal para usar como condição inicial\n",
+    "        _, pos, _, _ = osc.solve_coupled_system_linear(eta, v0, num_points=n) #Resolver o sistema\n",
     "\n",
+    "        #Atualização do gráfico\n",
     "        line[i].set_ydata(pos[:5, frame-1])\n",
     "\n",
     "    return line\n",
     "\n",
+    "#Declarar a animação\n",
     "anim = animation.FuncAnimation(fig=fig, func=update, frames=n, interval=50)\n",
     "\n",
     "plt.show()"
