--- a/Projeto_2/projeto_2.ipynb
+++ b/Projeto_2/projeto_2.ipynb
@@ -428,6 +428,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0d049cd9",
+   "metadata": {},
+   "source": [
+    "**Parte II - Oscilador Forçado e com atrito** \n",
+    "\n",
+    "Nesta parte, é introduzida uma extensão do sistema de osciladores acoplados para incluir os efeitos de atrito (amortecimento viscoso) e uma força externa harmónica aplicada a uma das massas. Para tal, foi criada a subclasse ForcedDampedOscillator, que herda da classe base de osciladores acoplados.\n",
+    "\n",
+    "A força externa tem amplitude F0 e frequência angular w, sendo aplicada a uma massa específica do sistema, indicada pelo índice forced_mass_index. O termo de atrito é proporcional à velocidade de cada massa e controlado pelo coeficiente c.\n",
+    "\n",
+    "O sistema é resolvido numericamente através de dois métodos:\n",
+    "\n",
+    "Runge-Kutta (solve_ivp), para maior precisão;\n",
+    "\n",
+    "Euler, para comparação com um método mais simples."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2e8f37ba",
@@ -502,6 +520,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0fe06196",
+   "metadata": {},
+   "source": [
+    "**Parte III - Simulação com Termo Cúbico Não Linear** \n",
+    "\n",
+    "Nesta parte, é analisado o comportamento de um sistema de osciladores acoplados que apresenta uma não linearidade cúbica na força de retorno. Para isso, foi criada a subclasse CubicNonlinearOscillator, que estende a classe base de osciladores introduzindo um termo proporcional ao cubo do deslocamento (𝛼𝑥^3) na equação do movimento.\n",
+    "\n",
+    "Este tipo de não linearidade representa sistemas físicos onde a força restauradora não segue exatamente a Lei de Hooke (linear), mas cresce de forma mais intensa com o deslocamento — fenômeno que pode ocorrer, por exemplo, em molas reais sob grandes deformações.\n",
+    "\n",
+    "A evolução temporal do sistema é obtida numericamente através de dois métodos:\n",
+    "\n",
+    "Runge-Kutta (solve_ivp), para maior precisão na integração das equações diferenciais não lineares;\n",
+    "\n",
+    "Euler, para comparação com um método mais simples e mais suscetível a instabilidades numéricas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "071b5bf2",
@@ -569,6 +605,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9ed3c0b",
+   "metadata": {},
+   "source": [
+    "**Parte IV - Análise Espectral com Transformada de Fourier (FFT)** \n",
+    "\n",
+    "Nesta parte, é realizada uma análise espectral da resposta temporal de uma das massas do sistema linear de osciladores acoplados, com o objetivo de identificar as frequências naturais de oscilação. Para isso, é utilizada a Transformada de Fourier Rápida (FFT), através da função fft da biblioteca scipy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1e205323",
@@ -618,7 +664,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -632,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
